feat: Basic implementation of game state tracking